src/objects/FieloPLT__ProviderOrder__c.object
<CustomObject>
    <description>Order number of the individual or entity which provides Rewards (e.g. Amazon).</description>
    <fields>
        <fullName>FieloPLT__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It shows the related Provider of the Provider Order. Provider always is a SFDC Account, either a Person or Business Account.</description>
        <label>Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Provider Orders</relationshipLabel>
        <relationshipName>ProviderOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__DeliveredDate__c</fullName>
        <description>Date in which the Provider of the Provider Order supplied the Redemption/s Item/s.</description>
        <label>Delivered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Redemption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It shows the Redemption reference ID which the Provider Order is related to.</description>
        <label>Redemption</label>
        <referenceTo>FieloPLT__Redemption__c</referenceTo>
        <relationshipLabel>Provider Orders</relationshipLabel>
        <relationshipName>ProviderOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Status__c</fullName>
        <description>It allows you to choose the Provider Order status. There are two available statuses: Open, when the Order is created and Delivered, when Provider has already fullfiled delivery.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GRSOrderNumber__c</fullName>
        <externalId>true</externalId>
        <label>GRS Order Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Provider Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PO-{0000}</displayFormat>
        <label>Provider Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provider Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>